--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Compiled JS
+lib
+
+# Enviroment variables for local testing
+.env
+
+# Temporary DB folder
+data
