--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
-    "codo": "^2.0.11",
-    "gulp": "^3.9.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-util": "^3.0.7"
+    "docco": "^0.7.0"
   }
 }
