--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create issues submitted from client's website",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register",
+    "test": "mocha",
     "docs": "yuidoc -c yuidoc.json .",
     "start": "node index.js"
   },
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/G07cha/IssueBot#readme",
   "dependencies": {
+    "async": "^1.5.0",
     "dotenv": "^1.2.0",
     "github": "^0.2.4",
     "good": "^6.4.0",
@@ -31,9 +32,11 @@
     "hapi": "^11.1.0",
     "mongodb": "^2.0.48",
     "mongoskin": "^2.0.3",
+    "queue": "^3.1.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
+    "mocha": "^2.3.4",
     "yuidocjs": "^0.9.0"
   }
 }
